testsuite/tests/contrib/lkt_semantic/erroneous_component_access/test.out
Resolving test.lkt
==================
Id   <RefId "Int" test.lkt:1:13-1:16>
     references <StructDecl prelude: "Int">

test.lkt:1:19: error: Cannot find entity `Cls` in this scope
1 | fun test(a: Int): Cls
  |                   ^^^

Id   <RefId "Int" test.lkt:3:8-3:11>
     references <StructDecl prelude: "Int">

Id   <RefId "test" test.lkt:3:14-3:18>
     references <FunDecl "test" test.lkt:1:1-1:22>

Expr <NumLit test.lkt:3:19-3:21>
     has type <StructDecl prelude: "Int">

